--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <main class="container">
-        
+        <section class="card">
+            <img class="card-image" src="https://i.ibb.co/W0YCpZj/TENIS-1.png">
+            <div class="card-content">
+                <h2 class="subtitle">Nike</h2>
+                <h1 class="title">Epic React Flyknit 2</h1>
+            </div>
+        </section>
     </main>
 </body>
 </html>
