--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="card-content">
                 <h2 class="subtitle">Nike</h2>
                 <h1 class="title">Epic React Flyknit 2</h1>
+                <p class="price"><span>R$</span> 359,00</p>
             </div>
         </section>
     </main>
