--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio CSS Papo de Dev</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./index.js"></script>
 </head>
 <body>
     <main class="container">
@@ -14,6 +15,14 @@
                 <h2 class="subtitle">Nike</h2>
                 <h1 class="title">Epic React Flyknit 2</h1>
                 <p class="price"><span>R$</span> 359,00</p>
+                <div class="colors">
+                    <p class="colors-title">Cores:</p>
+                    <p class="colors-options">
+                        <span class="option"></span>
+                        <span class="option"></span>
+                        <span class="option"></span>                      
+                    </p>
+                </div>
             </div>
         </section>
     </main>
