--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
                         <span class="option"></span>                      
                     </p>
                 </div>
+                <div class="size">
+                    <p class="size-title">Tamanhos:</p>
+                    <p class="size-numbers">
+                        <span class="number">37</span>
+                        <span class="number">38</span>
+                        <span class="number">39</span>         
+                        <span class="number">40</span>                                  
+                    </p>
+                </div>
             </div>
         </section>
     </main>
