--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
                 <h2 class="subtitle">Nike</h2>
                 <h1 class="title">Epic React Flyknit 2</h1>
                 <p class="price"><span>R$</span> 359,00</p>
-                <div class="colors">
-                    <p class="colors-title">Cores:</p>
-                    <p class="colors-options">
-                        <span class="option"></span>
-                        <span class="option"></span>
-                        <span class="option"></span>                      
-                    </p>
-                </div>
-                <div class="size">
-                    <p class="size-title">Tamanhos:</p>
-                    <p class="size-numbers">
-                        <span class="number">37</span>
-                        <span class="number">38</span>
-                        <span class="number">39</span>         
-                        <span class="number">40</span>                                  
-                    </p>
+                <div class="details-buy">
+                    <div class="colors">
+                        <p class="colors-title">Cores:</p>
+                        <p class="colors-options">
+                            <span class="option"></span>
+                            <span class="option"></span>
+                            <span class="option"></span>                      
+                        </p>
+                    </div>
+                    <div class="size">
+                        <p class="size-title">Tamanhos:</p>
+                        <p class="size-numbers">
+                            <span class="number">37</span>
+                            <span class="number">38</span>
+                            <span class="number">39</span>         
+                            <span class="number">40</span>                                  
+                        </p>
+                    </div>
+                    <div class="buy"></div>
                 </div>
             </div>
         </section>
