--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                             <span class="number">40</span>                                  
                         </p>
                     </div>
-                    <div class="buy"></div>
+                    <div class="buy">
+                        <img class="buy-store" src="./assets/store.svg">
+                    </div>
                 </div>
             </div>
         </section>
