--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         </p>
                     </div>
                     <div class="buy">
+                        <img class="buy-navigation" src="./assets/navigation.svg">
                         <img class="buy-store" src="./assets/store.svg">
                     </div>
                 </div>
