--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                         </p>
                     </div>
                     <div class="buy">
-                        <img class="buy-navigation" src="./assets/navigation.svg">
+                        <img class="buy-navigation-1" src="./assets/navigation-1.svg">
+                        <img class="buy-navigation-2" src="./assets/navigation-2.svg">
+                        <img class="buy-navigation-3" src="./assets/navigation-3.svg">
                         <img class="buy-store" src="./assets/store.svg">
                     </div>
                 </div>
