--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                         </p>
                     </div>
                     <div class="buy">
-                        <img class="buy-navigation-1" src="./assets/navigation-1.svg">
-                        <img class="buy-navigation-2" src="./assets/navigation-2.svg">
-                        <img class="buy-navigation-3" src="./assets/navigation-3.svg">
-                        <img class="buy-store" src="./assets/store.svg">
+                        <div class="expand-more">
+                            <img src="./assets/expand_more.svg" />
+                            <img src="./assets/expand_more.svg" />
+                            <img src="./assets/expand_more.svg" />
+                        </div>
+                        <img src="./assets/shopping-cart.svg" />
                     </div>
                 </div>
             </div>
